_sass/alerts.scss
/*
 * Copyright (c) 2017, Inversoft Inc., All Rights Reserved
 */

@import 'mixins';
@import 'variables';

/* Alerts
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.alert {
  align-items: center;
  background: white;
  border-radius: 2px;
  box-shadow: $layered-box-shadow;
  color: $alert-color;
  display: flex;
  font-size: 14px;
  justify-content: space-between;
  margin-bottom: 20px;
  opacity: 1;
  padding: 10px 20px 10px 20px;
  position: relative;
  transition: opacity 0.3s ease-in-out;
  width: 100%;

  &.closed {
    opacity: 0;
  }

  &.info {
    border-left: 7px solid $info-alert-background-color;

    i {
      color: $info-alert-background-color;
    }
  }

  &.error {
    border-left: 7px solid $error-alert-background-color;

    i {
      color: $error-alert-background-color;
    }
  }

  &.success {
    border-left: 7px solid $success-alert-background-color;

    i {
      color: $success-alert-background-color;
    }
  }

  &.warning {
    border-left: 7px solid $warning-alert-background-color;

    i {
      color: $warning-alert-background-color;
    }
  }

  a {
    display: inline-block;
    flex: 0 0 auto;
    font-size: 16px;
    font-weight: bold;
    height: 20px;
    text-decoration: none;
    width: 20px;

    i.fa {
      color: $gray-4;
    }

    &:hover, &:visited {
      color: #fff;
    }
  }

  i {
    display: inline-block;
    flex: 0 0 auto;
    font-size: 20px;
    margin-right: 10px;
    vertical-align: middle;
  }

  > p, > ul, > div, > span {
    flex: 0 1 100%;
    margin: 0;
    padding: 0;
  }
}

